Rename tests and remove inputs.
Don't need to share the inputs in the GH repo.

--- a/AdventOfCode2020.xcodeproj/xcshareddata/xcschemes/AdventOfCode2020.xcscheme
+++ b/AdventOfCode2020.xcodeproj/xcshareddata/xcschemes/AdventOfCode2020.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1FEEDFE0257AF2FA003E01A7"
+            BuildableName = "AdventOfCode2020.framework"
+            BlueprintName = "AdventOfCode2020"
+            ReferencedContainer = "container:AdventOfCode2020.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
