Run tests in parallel when possible.

--- a/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
@@ -87,12 +87,14 @@
          <EnvironmentVariable
             key = "ENABLE_LOGGING"
             value = ""
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "AdventOfCodeTests"
